[Payments] Do not select an address if the merchant doesn't support it

Bug: 728770
Test: browser_tests
Change-Id: I5aa86e332faa75a100cf403d08b3bf096a3c62f4